# pdf-core-library

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
config/: default_settings.yaml
config/brands/ai_savvy_parents/: ASSETS_SUMMARY.md  EXTERNAL_USAGE.md  asset_registry.json
config/brands/ai_savvy_parents/assets/: ai_savvy_parents_style.css
config/brands/ai_savvy_parents/assets/fonts/: README.md
config/brands/ai_savvy_parents/assets/images/: LOGO_UPDATE.md  README.md
config/brands/ai_savvy_parents/backups/: backup_20250811_192018.yaml  backup_20250811_192516.yaml  backup_corrected_20250812_145843.yaml
config/brands/ai_savvy_parents/templates/: brochure.html  checklist.html  contract.html  cover.html  document.html  invoice.html  letter.html  newsletter.html  presentation.html  proposal.html  report.html
config/brands/example_company/: brand_config.yaml
config/brands/example_company/assets/: example_company_style.css
config/brands/example_company/templates/: document.html
config/templates/test_template/: template_config.yaml
config/templates/test_template_1755181332873/: template_config.yaml
config/templates/test_template_1755181421116/: template_config.yaml
config/templates/test_template_1755184322741/: template_config.yaml
config/templates/test_template_1755189893795/: template_config.yaml
config/templates/unique_test_template/: template_config.yaml
src/pdf_core/: __init__.py  asset_processor.py  logging.py  performance.py  security.py
src/pdf_core/core/: __init__.py  async_pdf_generator.py  brand_manager.py  content_types.py  input_processor.py  pdf_generator.py  template_engine.py
src/pdf_core/services/: __init__.py  storage_abstraction.py
tests/: conftest.py
tests/unit/: test_legacy_compatibility.py
tests/unit/core/: test_brand_manager.py  test_pdf_generator.py  test_template_engine.py
tests/utils/: helpers.py
