[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-core"
version = "1.0.0"
description = "Professional PDF generation library with brand management and template system"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Piotr Kwidzinski", email = "pkwidzin@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Printing",
]
python_requires = ">=3.8"
dependencies = [
    # Core PDF generation
    "playwright>=1.40.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    
    # Template and content processing
    "cssselect>=1.2.0",
    "lxml>=4.9.0",
    "markupsafe>=2.1.0",
    "beautifulsoup4>=4.12.0",
    
    # Asset processing
    "cairosvg>=2.7.0",
    
    # Async and utilities
    "aiofiles>=23.0.0",
    "typing-extensions>=4.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0", 
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]
s3 = [
    "aioboto3>=11.0.0",
    "botocore>=1.29.0",
]
redis = [
    "redis[hiredis]>=4.5.0",
    "aioredis>=2.0.0",
]
all = [
    "pdf-core[dev,docs,s3,redis]"
]

[project.urls]
Homepage = "https://github.com/pdf-pipeline/pdf-core-library"
Documentation = "https://pdf-core.readthedocs.io/"
Repository = "https://github.com/pdf-pipeline/pdf-core-library.git"
Issues = "https://github.com/pdf-pipeline/pdf-core-library/issues"
Changelog = "https://github.com/pdf-pipeline/pdf-core-library/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf_core = ["templates/**/*", "config/**/*", "schemas/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=pdf_core --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true